# microservicedocumentextractor

./: .env  .replit  LOCAL_SETUP.md  README.md  press PDF - output.json  press pdf fast.json  pyproject.toml  requirements-without-locks.txt  technical_documentation.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--content-List-of-Olympic-Games-host-cities-nMap-of-host-cities-and-countries-of-the-modern-summer-1757961920361_1757961920362.txt  Pasted--elements-type-Text-text-List-of-Olympic-G-1758040415954_1758040415955.txt  Pasted--elements-type-Text-text-List-of-Olympic-G-1758041003060_1758041003061.txt  Pasted--libglib-pkgs-main-win-64-libglib-2-84-2-h405b238-0-liblzma-conda-forge-wi-1757947568197_1757947568198.txt  Pasted--venv-PS-C-Users-gtgag-Downloads-documentContentExtractor-main-documentContentExtractor-main-uvi-1757965038060_1757965038061.txt  Pasted--venv-PS-C-Users-gtgag-Downloads-documentContentExtractor-main-documentContentExtractor-main-uvi-1758038644769_1758038644769.txt  Pasted-PS-C-Users-gtgag-Downloads-documentContentExtractor-main-documentContentExtractor-main-Activate--1757933956046_1757933956047.txt  Pasted-content-e-7-n-e-WikiPpeDIA-7-The-Free-Encyclopedia-nList-of-Olympic-Games-host-cities-na-1757961475095_1757961475098.txt
src/: main.py  models.py  processor.py  routes.py  settings.py
